<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <Button
        android:id="@+id/registerButton"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/button_edit_background"
        android:text="Register"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.571" />

    <EditText
        android:id="@+id/password1"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/login_edit_background"
        android:drawableStart="@drawable/password"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Enter Password"
        android:inputType="textPassword"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@+id/password2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/login_edit_background"
        android:drawableStart="@drawable/password"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Re-Enter Password"
        android:inputType="textPassword"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/login_edit_background"
        android:drawableStart="@drawable/username"
        android:drawableLeft="@drawable/username"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Enter UserName"
        android:inputType="textPersonName"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@+id/password1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/goBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Return to login page"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />

</androidx.constraintlayout.widget.ConstraintLayout>